--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,6 +16,8 @@ serde_json = "1.0.114"
 slint = "1.4"
 sysinfo = "0.30.7"
 uuid = { version = "1.7.0", features = ["v4", "fast-rng"] }
+winapi = { version = "0.3.9", features = ["winuser", "minwindef"] }
+windows = { version = "0.54.0", features = ["Win32", "Win32_Graphics", "Win32_Graphics_Gdi"] }
 
 [build-dependencies]
 slint-build = "1.4"
