--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,7 +16,7 @@ serde_json = "1.0.114"
 slint = "1.4"
 sysinfo = "0.30.7"
 uuid = { version = "1.7.0", features = ["v4", "fast-rng"] }
-windows = { version = "0.54.0", features = ["Win32", "Win32_Graphics", "Win32_Graphics_Gdi", "Win32_UI", "Win32_UI_Shell", "Win32_UI_WindowsAndMessaging", "Win32_Storage_FileSystem", "Win32_System_Threading", "Win32_System_ProcessStatus"] }
+windows = { version = "0.54.0", features = ["Win32", "Win32_Graphics", "Win32_Graphics_Gdi", "Win32_UI", "Win32_UI_Input_KeyboardAndMouse", "Win32_UI_Shell", "Win32_UI_WindowsAndMessaging", "Win32_Storage_FileSystem", "Win32_System_Threading", "Win32_System_ProcessStatus"] }
 
 [build-dependencies]
 slint-build = "1.4"
